<resources>
    <string name="app_name">InciApp</string>
    <!-- settings -->
    <string name="settings">Configuración</string>
    <string name="settings_logout">Cerrar sesión</string>
    <string name="settings_modificarUser">Modificar perfil</string>
    <string name="logout_mensaje">Sesión cerrada</string>
    <!-- activity main -->
    <string name="correo_log">Correo</string>
    <string name="contra_log">Contraseña</string>
    <string name="login">Login</string>
    <string name="registrar_log">Registrarse</string>
    <string name="servidor_no">Debe conectarse a un servidor previamente</string>
    <string name="log_no">Correo o contraseña incorrecta</string>
    <!-- pop up -->
    <string name="ip_popup">IP :</string>
    <string name="port_popup">Puerto :</string>
    <string name="encabezado_popup">Localización Servidor</string>
    <string name="boton_popup">Aceptar</string>
    <string name="ok_servidor">Conectado al servidor.</string>
    <string name="fail_servidor">No se ha podido establecer conexión con el servidor.</string>
    <string name="error_popup">Introduzca todos los datos.</string>
    <!-- registrar usuario -->
    <string name="repcontra_reg">Rep Contraseña</string>
    <string name="nombre_reg">Nombre</string>
    <string name="apellidos_reg">Apellidos</string>
    <string name="dni_reg">DNI</string>
    <string name="tlf_reg">Tlf</string>
    <string name="registrar_reg">Registrarme</string>
    <string name="regis_ok">Se ha registrado correctamente.</string>
    <string name="regis_no">Ya existe un usuario con ese correo.</string>
    <!-- layout ciudadano -->
    <string name="boton_incidencia">Nueva Incidencia</string>
    <string name="boton_seguimiento_inci">Incidencias Activas</string>
    <string name="boton_historial_inci">Historial Incidencias</string>
    <!-- layout incidencia nueva -->
    <string name="boton_ubicacion">Obtener ubicación</string>
    <string name="descripcion_text">Descripción de la incidencia…</string>
    <string name="boton_foto">Tomar foto</string>
    <string name="tipo_text">Tipo de incidencia:</string>
    <string name="boton_reg_incidencia">Registrar incidencia</string>
    <string-array name="spinner_value">
        <item>Alumbrado</item>
        <item>Parques y Jardines</item>
        <item>Fuentes de Agua</item>
        <item>Alcantarillado</item>
        <item>Mobiliario Urbano</item>
        <item>Calzado y Acera</item>
        <item>Señales y Semáforos</item>
    </string-array>
    <string name="incidenciaOk">Incidencia registrada.</string>
    <string name="incidenciaYaRegistrada">Esa incidencia ya ha sido registrada anteriormente.</string>
    <string name="incidenciaDenegada">Error. No se ha podido registrar la incidencia.</string>
    <string name="errorImagen">Error al enviar imagen.</string>
    <string name="imagen_description">Imagen incidencia</string>
    <!-- DetallesIncidencia -->
    <string name="NuevaRegistrada">Registro Incidencia</string>
    <string name="EnTramite">En Tramite</string>
    <string name="Validada">Validada</string>
    <string name="EnArreglo">En Arreglo</string>
    <string name="ValidarArreglo">Validar Arreglo</string>
    <string name="Arreglada">Arreglada</string>
    <string name="Solucionada">Solucionada</string>
    <string name="Denegada">Denegada</string>
    <string name="DetalleIncidencia">Detalles Incidencia</string>
    <!-- select rol -->
    <string name="ciudadano_rol">CIUDADANO</string>
    <string name="supervisor_rol">SUPERVISOR</string>
    <string name="empleado_rol">EMPLEADO</string>
    <!-- layout_supervisor -->
    <string name="boton_enTramite">Incidencia en Tramite</string>
    <string name="boton_validarArreglo">Validar Arreglo Incidencia</string>
    <!-- layout_supervisor_incidencia -->
    <string name="boton_enTramite_validar">VALIDAR</string>
    <string name="boton_enTramite_denegar">DENEGAR</string>
    <string name="boton_enTramite_ubicacion">IR A UBICACIÓN</string>
    <string name="title_activity_maps">Map</string>
    <!-- SupervisorIncidencia -->
    <string name="validar_incidencia">¿Está seguro de validar la incidencia?</string>
    <string name="denegar_incidencia">¿Está seguro de denegar la incidencia?</string>
    <string name="validar_incidencia_ok">Incidencia validada.</string>
    <string name="denegar_incidencia_ok">Incidencia denegada.</string>
    <string name="validar_arreglo_incidencia">¿Está seguro de validar el arreglo de la incidencia?</string>
    <string name="denegar_arreglo_incidencia">¿Está seguro de denegar el arreglo de la incidencia?</string>
    <string name="validar_arreglo_incidencia_ok">Arreglo validado.</string>
    <string name="denegar_arreglo_incidencia_ok">Arreglo denegado.</string>
    <!-- pop up denegar supervisor incidencia -->
    <string name="titulo_denegarpopup">Escriba el motivo de la denegación.</string>
    <string name="error_denegarpopup">Introduzca el mótivo.</string>
    <!-- activity_maps -->
    <string name="boton_normal">Normal</string>
    <string name="boton_hibrido">Híbrido</string>
    <!-- layout_empleado_incidencia -->
    <string name="titulo_separator">ARREGLOS</string>
    <string name="boton_enviar_arreglo">Enviar</string>
    <string name="descripcion_arreglo_text">Descripción del arreglo.</string>
    <string name="arreglo_incidencia_ok">Registrado arreglo correctamente.</string>
    <!-- layout_modificar_usuario -->
    <string name="departamento_modificar">Dept</string>
    <string name="boton_modificar">Modificar</string>
    <!-- ModificarUsuario -->
    <string name="usuario_modificado">Usuario modificado.</string>

    <string name="mensaje_error_conection_server">Error en la comunicación. Vuelva a intentarlo más tarde.</string>
    <string name="mensaje_error">Se ha producido un error.</string>
    <string name="mensaje_cerrar_app">¿Desea salir de la aplicación?</string>

</resources>