<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecond"
    android:gravity="center">


    <Button
        android:id="@+id/boton_ciudadano"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:padding="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/ciudadano_rol"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:textColor="@color/colorSecond"
        android:textSize="25sp"
        />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/boton_supervisor"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:padding="20dp"
            android:text="@string/supervisor_rol"
            android:textAlignment="center"
            android:background="@color/colorAccent"
            android:textColor="@color/colorSecond"
            android:textSize="25sp"
            android:visibility="visible"/>

        <Button
            android:id="@+id/boton_empleado"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:padding="20dp"
            android:text="@string/empleado_rol"
            android:textAlignment="center"
            android:background="@color/colorAccent"
            android:textColor="@color/colorSecond"
            android:textSize="25sp"
            android:visibility="gone"/>

    </RelativeLayout>


</LinearLayout>