<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorSecond">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imagen_log"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo_inciapp"
            />

        <EditText
            android:id="@+id/correo_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_log"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="#7BA4A8"
            android:textSize="18sp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/contra_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contra_log"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="#7BA4A8"
            android:textSize="18sp"
            android:inputType="textPassword"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/progressbar_activitymain"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:progressDrawable="@drawable/progressbar_style"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/boton_loggin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorSecond"
                android:background="@color/colorPrimary"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/boton_registrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/registrar_log"
            android:textColor="@color/colorSecond"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            />


    </LinearLayout>


</RelativeLayout>