<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/popupcabecera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/encabezado_popup"
        android:textSize="28sp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#7BA4A8"
            android:text="@string/ip_popup"
            android:layout_marginRight="57dp"/>
        <EditText
            android:id="@+id/popup_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="#7BA4A8"
            android:padding="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:text="@string/port_popup"
            android:layout_marginRight="20dp"/>

        <EditText
            android:id="@+id/port_servidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressbar_popup"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:progressDrawable="@drawable/progressbar_style"
            />

        <Button
            android:id="@+id/popup_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/boton_popup"
            android:textColor="#DDDEDE"
            android:background="#7BA4A8"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            />
    </RelativeLayout>

</LinearLayout>