<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecond"
    tools:context=".EmpleadoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/emp_inci_tipo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/emp_inci_fecha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="18sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/emp_inci_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorTextDefault"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/emp_inci_imagen"
                android:layout_width="400dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/imagen_description" />

            <TextView
                android:id="@+id/emp_inci_ubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="15dp"
                android:textColor="@color/colorTextDefault"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/emp_inci_boton_ubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:text="@string/boton_enTramite_ubicacion"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:visibility="invisible" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/emp_inci_separator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/titulo_separator"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_mal_arreglo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="#7BA4A8"
                android:textSize="18sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/descripcion_arreglo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion_arreglo_text"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="#7BA4A8"
                android:textSize="18sp"
                android:visibility="gone"/>


            <Button
                android:id="@+id/boton_foto_arreglo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/boton_foto"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/imagen_arreglo"
                android:layout_width="400dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:contentDescription="@string/imagen_description"
                android:visibility="gone"/>


            <Button
                android:id="@+id/emp_inci_boton_enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:text="@string/boton_enviar_arreglo"
                android:visibility="invisible"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar_emple_inci"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:progressDrawable="@drawable/progressbar_style"
        android:visibility="visible" />

</RelativeLayout>